tests/errors/init_state/borrow_precondition/shared_borrow_of_partial.sim
struct P: Copy + Drop { x: i64 y: i64 }
fn f() {
  p: P;
  r: &P;
  entry:
    p.x = 1;
    r = &p;
    return
}
